// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegacyImageTest ImageRTLTest 1`] = `
{
  "Automation Tree": {},
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "image-container",
    },
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 255, 0, 255)",
    },
    "Comment": "image-container",
    "Offset": "0, 0, 0",
    "Size": "750, 450",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "30, 30",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "30, 0, 0",
        "Size": "690, 15",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "-30, 0, 0",
        "Size": "30, 30",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "-15, 30, 0",
        "Size": "15, 390",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "-30, -30, 0",
        "Size": "30, 30",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "30, -15, 0",
        "Size": "690, 15",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "0, -30, 0",
        "Size": "30, 30",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "0, 30, 0",
        "Size": "15, 390",
        "Visual Type": "SpriteVisual",
      },
    ],
  },
}
`;

exports[`LegacyImageTest ImageWithBorderTest 1`] = `
{
  "Automation Tree": {},
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "image-container",
    },
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 255, 0, 255)",
    },
    "Comment": "image-container",
    "Offset": "0, 0, 0",
    "Size": "750, 450",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 255, 0, 85)",
        },
        "Offset": "0, 0, 0",
        "Size": "30, 30",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 255, 0, 85)",
        },
        "Offset": "30, 0, 0",
        "Size": "690, 15",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 255, 0, 85)",
        },
        "Offset": "-30, 0, 0",
        "Size": "30, 30",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 255, 0, 85)",
        },
        "Offset": "-15, 30, 0",
        "Size": "15, 390",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 255, 0, 85)",
        },
        "Offset": "-30, -30, 0",
        "Size": "30, 30",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 255, 0, 85)",
        },
        "Offset": "30, -15, 0",
        "Size": "690, 15",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 255, 0, 85)",
        },
        "Offset": "0, -30, 0",
        "Size": "30, 30",
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 255, 0, 85)",
        },
        "Offset": "0, 30, 0",
        "Size": "15, 390",
        "Visual Type": "SpriteVisual",
      },
    ],
  },
}
`;

exports[`LegacyImageTest ImageWithoutBorderTest 1`] = `
{
  "Automation Tree": {},
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "image-container",
    },
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 255, 0, 255)",
    },
    "Comment": "image-container",
    "Offset": "0, 0, 0",
    "Size": "750, 450",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacyImageTest ImageWithoutBorderTestOneMoreClick 1`] = `
{
  "Automation Tree": {},
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "image-container",
    },
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 255, 0, 255)",
    },
    "Comment": "image-container",
    "Offset": "0, 0, 0",
    "Size": "750, 450",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "30, 30",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "30, 0, 0",
        "Size": "690, 15",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "-30, 0, 0",
        "Size": "30, 30",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "-15, 30, 0",
        "Size": "15, 390",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "-30, -30, 0",
        "Size": "30, 30",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "30, -15, 0",
        "Size": "690, 15",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "0, -30, 0",
        "Size": "30, 30",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "0, 30, 0",
        "Size": "15, 390",
        "Visual Type": "SpriteVisual",
      },
    ],
  },
}
`;
